[gd_scene format=3 uid="uid://cfbr318tkpgjm"]

[ext_resource type="Script" uid="uid://1phjkj6y0ur3" path="res://autoloads/achievement_tracker/achievement_tracker.gd" id="1_600lq"]
[ext_resource type="Script" uid="uid://ensdc4nbfc1e" path="res://achievements/achievement.gd" id="2_52sdh"]
[ext_resource type="Resource" uid="uid://bfml58qfr3q63" path="res://achievements/logged_in.tres" id="3_eiejm"]
[ext_resource type="Resource" uid="uid://cda78c3tb4rps" path="res://achievements/loaded_up.tres" id="4_676jm"]
[ext_resource type="Shader" uid="uid://bbrreauqpd2by" path="res://shaders/subtle_noise.gdshader" id="4_eiejm"]
[ext_resource type="Resource" uid="uid://73ki7nv8v1th" path="res://achievements/item_streak.tres" id="5_56a88"]
[ext_resource type="Resource" uid="uid://4l1o2qkvbqal" path="res://achievements/grind_body.tres" id="6_8u842"]
[ext_resource type="Resource" uid="uid://b2my71pckils0" path="res://achievements/grinder_goal_100.tres" id="7_ufhoc"]
[ext_resource type="Resource" uid="uid://dhiung6kudwq" path="res://achievements/grinder_goal.tres" id="8_swko2"]
[ext_resource type="Resource" uid="uid://boj30t73m1kcf" path="res://achievements/grinder_destroyed.tres" id="9_nthpd"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_3rcqm"]
frequency = 0.3
fractal_octaves = 4
fractal_lacunarity = 2.67
fractal_gain = -0.31

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_5wtbr"]
width = 1024
height = 1024
noise = SubResource("FastNoiseLite_3rcqm")
seamless = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_52sdh"]
shader = ExtResource("4_eiejm")
shader_parameter/noise_tex = SubResource("NoiseTexture2D_5wtbr")
shader_parameter/noise_scale = 1.0000000475
shader_parameter/noise_strength = 0.20000000298023

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_eiejm"]

[node name="AchievementTracker" type="CanvasLayer" unique_id=1725902245]
script = ExtResource("1_600lq")
achievement_list = Array[ExtResource("2_52sdh")]([ExtResource("3_eiejm"), ExtResource("4_676jm"), ExtResource("5_56a88"), ExtResource("6_8u842"), ExtResource("7_ufhoc"), ExtResource("8_swko2"), ExtResource("9_nthpd")])

[node name="AchievementPanel" type="PanelContainer" parent="." unique_id=64493941]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_52sdh")
anchors_preset = -1
anchor_left = 0.3
anchor_top = -0.23
anchor_right = 0.7
anchor_bottom = -0.03
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="AchievementPanel" unique_id=1062874317]
layout_mode = 2

[node name="AchievementIcon" type="TextureRect" parent="AchievementPanel/HBoxContainer" unique_id=75668200]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
texture = SubResource("NoiseTexture2D_eiejm")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="AchievementPanel/HBoxContainer" unique_id=169116138]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="AchievementName" type="RichTextLabel" parent="AchievementPanel/HBoxContainer/VBoxContainer" unique_id=428220393]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 24
text = "NYI Name"
horizontal_alignment = 1

[node name="AchievementDescription" type="RichTextLabel" parent="AchievementPanel/HBoxContainer/VBoxContainer" unique_id=1555495109]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
text = "NYI Description"
fit_content = true
scroll_active = false
horizontal_alignment = 1

[node name="SFX" type="AudioStreamPlayer" parent="." unique_id=480742394]
unique_name_in_owner = true
bus = &"SFX"
